Change building scripts

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@hthuang/contracts": "0.0.3",
     "@openzeppelin/contracts": "^4.5.0",
     "@truffle/hdwallet-provider": "^2.0.3",
+    "commander": "^9.3.0",
+    "config": "^3.3.7",
     "fs": "^0.0.1-security",
     "web3": "^1.7.1"
   }
